examples/type_system/failing/131_call_arg_span_precision.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/131_call_arg_span_precision.flx
// error[E300]: Argument Type Mismatch
//
// I found the wrong type in the 2nd argument to `pair`.
//
//   examples/type_system/failing/131_call_arg_span_precision.flx:34:22
//    |
// 31 | fn pair(a: Int, b: Int) -> Int { a + b }
//    | ------------------------------ `pair` expects `Int` as the 2nd parameter
// 32 |
// 33 | fn main() -> Unit {
// 34 |     let _x = pair(1, "oops")
//    |                      ^^^^^^
//    |                      ------ this argument has type `String`
//
// Note:
//   expected argument type: Int
//   found argument type: String
//   the actual argument type is inferred from this expression
//   the expected argument type comes from the function signature
//
// Help:
//   Pass a `Int` value as the 2nd argument.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

fn pair(a: Int, b: Int) -> Int { a + b }

fn main() -> Unit {
    let _x = pair(1, "oops")
}
